# Naifuru

./: Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: custom-sub-issue-template.md  feature-issue-template.md
src/: analysis_config_file.rs  analyze_config_file_parser.rs  cli.rs  error.rs  errors.rs  lib.rs  logging.rs  main.rs
src/extractor/: mod.rs  tw_paleart_sac.rs
